(refactor) Eliminate record_tags entity -> opt for @ManyToMany relation: simplyfied but more eficient approch