@@ -3,10 +3,7 @@ package org.example.rekollectapi.service.impl;
 import lombok.AllArgsConstructor;
 import org.example.rekollectapi.dto.response.TagResponseDTO;
 import org.example.rekollectapi.model.entity.RecordEntity;
-import org.example.rekollectapi.model.entity.RecordTagEntity;
 import org.example.rekollectapi.model.entity.TagEntity;
-import org.example.rekollectapi.model.ids.RecordTagId;
-import org.example.rekollectapi.repository.RecordTagRepository;
 import org.example.rekollectapi.repository.TagRepository;
 import org.example.rekollectapi.service.TagService;
 import org.springframework.stereotype.Service;
@@ -20,15 +17,12 @@ import java.util.stream.Collectors;
 public class TagServiceImpl implements TagService {
 
     private final TagRepository tagRepository;
-    private final RecordTagRepository recordTagRepository;
 
     @Override
     public List<TagResponseDTO> getAllTags() {
-        List<TagEntity> tags = tagRepository.findAll();
-
-        return tags.stream()
+        return tagRepository.findAll().stream()
                 .map(tag -> new TagResponseDTO(tag.getId(), tag.getTagName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -48,18 +42,12 @@ public class TagServiceImpl implements TagService {
 
         if (!newTags.isEmpty()) {
             tagRepository.saveAll(newTags);
+            existingTags.addAll(newTags);
         }
 
-        //  Merge existing & new tags
-        existingTags.addAll(newTags);
-
-        //  Create record-tags relationships in batch
-        List<RecordTagEntity> recordTags = existingTags.stream()
-                .map(tag -> new RecordTagEntity(new RecordTagId(record.getId(), tag.getId()), record, tag))
-                .toList();
-
-        // Save in batch
-        recordTagRepository.saveAll(recordTags);
+        // Assign tags to the record
+        record.getTags().clear();
+        record.getTags().addAll(existingTags);
 
         return existingTags.stream()
                 .map(tag -> new TagResponseDTO(tag.getId(), tag.getTagName()))
